--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,8 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+  outline: 2px solid red;
+ 
 }
 .section {
   padding-top: 94px;
@@ -111,10 +113,9 @@ img {
 .header-box {
   display: flex;
   align-items: center;
-  padding-top: 11px;
 }
 /* hero */
-.hero {
+.hero{
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: var(--black-background-color);
@@ -229,9 +230,8 @@ img {
   margin-bottom: 50px;
 }
 .team-title {
-  margin-top: 30px;
-  margin-bottom: 0;
-
+  margin-top: 0;
+  margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -239,15 +239,18 @@ img {
   text-align: center;
 }
 .team-text {
-  margin-top: 10px;
-  margin-bottom: 30px;
-
+  margin-top: 0;
+  margin-bottom: 0;
   line-height: 1.19;
   text-align: center;
 }
 .team-list {
   display: flex;
   justify-content: space-between;
+}
+.team-description {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 /* portfolio */
 .filter {
@@ -292,20 +295,23 @@ img {
   margin-top: 30px;
 }
 .card-title {
-  margin: 0 24px 4px 24px;
-  padding: 20px 0 0 0;
+  margin-top: 0;
+  margin-bottom: 4px;
   color: var(--title-text-color);
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
 .card-text {
-  margin: 0 24px 20px 24px;
+  margin-top: 0;
+  margin-bottom: 0;
 
   color: var(--primary-text-color);
   line-height: 1.88;
 }
 .description {
+  padding: 20px 24px;
+
   width: calc(100% - 60px / 3);
   min-width: 370px;
   border-bottom: 1px solid var(--border-button-portfolio);
@@ -314,10 +320,8 @@ img {
 }
 /*-footer */
 .footer {
-  background-color: var(--black-background-color);
-}
-.footer-container {
   padding: 60px 0;
+  background-color: var(--black-background-color);
 }
 .footer-logo {
   display: block;
